Fixes to 404 search spacing

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -3369,6 +3369,12 @@ figure.align-center figcaption {
     color: auto;
     border-color: transparent; }
 
+.narrow-page .home-search__form {
+  padding-bottom: 48px;
+  padding-top: 48px; }
+  .narrow-page .home-search__form .home-search__form-input {
+    width: 100%; }
+
 .home-search__presearch-links {
   list-style: none;
   margin: 0;
