--- a/docroot/themes/custom/ucsf/scss/node/_node-homepage.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-homepage.scss
@@ -340,6 +340,17 @@
   }
 }
 
+.narrow-page {
+  .home-search__form {
+    padding-bottom: $space-six;
+    padding-top: $space-six;
+
+    .home-search__form-input {
+      width: 100%;
+    }
+  }
+}
+
 .home-search__presearch-links {
   list-style: none;
   margin: 0;
